--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,8 +28,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt pytest
 
-      # Step 4: Run tests
+      # Step 4: Set PYTHONPATH to ensure src is found
+      - name: Set up PYTHONPATH
+        run: echo "PYTHONPATH=$PWD/src" >> $GITHUB_ENV
+
+      # Step 5: Debug test discovery
+      - name: Debug test discovery
+        run: pytest --collect-only
+
+      # Step 6: Run tests
       - name: Run tests
-        run: pytest
+        run: pytest tests/
